welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
      avance(); setCouleurBrosse(); T(l); baisseBrosse(); leveBrosse()
                                ^